fixes the header symbol remaining invisibly after minimizing.

--- a/hub/hub.css
+++ b/hub/hub.css
@@ -14,7 +14,7 @@
     --surface             : #F5F1ED;
     --error               : #C53426;
 
-    /* Fargen til elementer som ligger "på" gitt annet element */
+    /* Fargen til elementer som ligger "på" (over) gitt annet element */
     --onPrimary           : white;
     --onSecondary         : black;
     --onBackground        : black;
@@ -566,7 +566,7 @@ header img { max-height : 100% !important; /* for å ikke exceede parent element
 
 
 .clipPathShadow {
-    filter : drop-shadow(0px 10px 5px darkred /*rgba(0,0,0,0.5)*/);
+    filter : drop-shadow(0px 10px 5px var(--shadowColor));
     }
 
 
